--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,12 @@
 ---
 - name: install dhcpcd client
-  become: yes
+  become: true
   package:
     name: dhcpcd5
   when: dhcpcd_install_packages
 
 - name: configure global dhcpcd config values
-  become: yes
+  become: true
   lineinfile:
     path: "{{ dhcpcd_config_path }}"
     regexp: "^{{ item.keyword }}"
@@ -17,7 +17,7 @@
   notify: reconfigure dhcpcd
 
 - name: configure dhcpcd interfaces
-  become: yes
+  become: true
   blockinfile:
     path: "{{ dhcpcd_config_path }}"
     marker: "### {mark} ANSIBLE MANAGED BLOCK {{ item.name }} ###"
@@ -28,7 +28,7 @@
   notify: reconfigure dhcpcd
 
 - name: purge legacy dhclient
-  become: yes
+  become: true
   package:
     name: isc-dhcp-client
     state: absent
